--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "author": "Siva",
   "license": "ISC",
