--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "node-path",
-  "version": "1.0.0",
+  "name": "@siva_sornaram/web-file-server",
+  "version": "1.1.13",
   "description": "",
   "main": "app",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\""
   },
   "author": "Siva",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "clui": "^0.3.6",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
     "multer": "^1.4.4",
@@ -18,5 +19,8 @@
   },
   "devDependencies": {
     "cors": "^2.8.5"
+  },
+  "bin": {
+    "servfiles": "./app-cli.js"
   }
 }
