--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@siva_sornaram/web-file-server",
-  "version": "1.2.0",
+  "version": "1.3.1",
   "description": "",
   "main": "app",
   "scripts": {
@@ -10,8 +10,10 @@
   "author": "Siva",
   "license": "ISC",
   "dependencies": {
+    "@siva_sornaram/web-file-server": "^1.3.1",
     "body-parser": "^1.19.1",
     "clui": "^0.3.6",
+    "commander": "^8.3.0",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
     "multer": "^1.4.4",
