--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@siva_sornaram/web-file-server",
-  "version": "1.3.9",
+  "version": "2.0.1",
   "description": "",
   "main": "app",
   "scripts": {
@@ -15,6 +15,7 @@
     "commander": "^8.3.0",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1"
   },
